Fix contact form bug where text is too close to the edges

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -155,6 +155,7 @@ body {
     border: 2px solid black;
     border-radius: 10px;
     background-color: white;
+    padding-left: 1.5%;
 }
 
 #feedback {
@@ -166,6 +167,8 @@ body {
     margin: 0 auto;
     height: 5rem;
     border: 2px solid black;
+    padding-left: 1.5%;
+    padding-top: 1%;
 }
 
 .submit_button {
